--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,58 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="icons/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
-    <link rel="stylesheet" href="css/bootstrap-grid.min.css">
-    <link rel="stylesheet" href="css/icon-font.css">
-    <link rel="stylesheet" href="css/style.min.css">
-    <title>Pulse</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="icon" href="icons/favicon.ico" type="image/x-icon">
+	<link rel="stylesheet" href="css/bootstrap-reboot.min.css">
+	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
+	<link rel="stylesheet" href="css/font.css">
+	<link rel="stylesheet" href="css/icon-font.css">
+	<link rel="stylesheet" href="css/style.min.css">
+	<title>Pulse</title>
 </head>
 <body>
-    
+	<div class="selection">
+		<div class="container">
+			<header class="header">
+				<a class="header__logo" href="#">
+					<img src="icons/pulse-logo.png" alt="pulse logo">
+				</a>
+				<div class="header__text">
+					Официальный представитель
+					<span>Garmin, Polar, Suunto</span>
+				</div>
+				<div class="header__contacts">
+					<a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
+					<button class="button">заказать звонок</button>
+				</div>
+			</header>
+
+			<div class="selection__wrapper">
+				<h1 class="selection__title">Подбор пульсометра</h1>
+				<h2 class="selection__subtitle">с учётом Вашего уровня подготовки</h2>
+
+				<div class="selection__icons">
+					<div class="selection__icon">
+						<span class="icon-timer"></span>
+						Время подбора: 10 минут
+					</div>
+					<div class="selection__icon">
+						<span class="icon-delivery"></span>
+						Бесплатная доставка
+					</div>
+					<div class="selection__icon">
+						<span class="icon-questions"></span>
+						Ответим на все вопросы
+					</div>
+				</div>
+				<button class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
+				<div class="selection__link">
+					или
+					<a href="#">перейти в каталог</a>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
