--- a/src/index.html
+++ b/src/index.html
@@ -54,5 +54,41 @@
 			</div>
 		</div>
 	</div>
+
+	<div class="advantages">
+		<div class="container">
+			<h2 class="advantages__title">наши преимущества</h2>
+			<div class="advantages__wrapper">
+					<div class="advantages__item">
+						<div class="advantages__icon">
+							<span class="icon-cup"></span>
+						</div>
+						<div class="advantages__description-title">Делимся опытом</div>
+						<div class="advantages__description-subtitle">
+							Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!
+						</div>
+					</div>
+					<div class="advantages__item">
+						<div class="advantages__icon">
+							<span class="icon-heart-rate"></span>
+						</div>
+						<div class="advantages__description-title">Заботимся о здоровье</div>
+						<div class="advantages__description-subtitle">
+							Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!
+						</div>
+					</div>
+					<div class="advantages__item">
+						<div class="advantages__icon">
+							<span class="icon-shoe"></span>
+						</div>
+						<div class="advantages__description-title">Учим бегать</div>
+						<div class="advantages__description-subtitle">
+							Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России -
+							<a href="#" class="advatnages__link"> I LOVE RUNNING.</a>
+						</div>
+					</div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
